# YangVillageWeb

./: .gitignore  CMakeLists.txt  Portfolio.cpp  README.md  hello.hs  initdb.sql  robots.txt  sitemap.xml  start.sh  template.xml  wt_config.xml  wt_static.conf  yangvillage.conf  yangvillage.wt
grav-images/src/: table.domain
grav-images/src/04-04/: 522.style
grav-images/src/syndesmos/: MessagesSummary.substance
grav-images/src/tex/: 04-01-81.tex
grav-pages/01.home/: default.md  homepage.md
grav-pages/02.department/: default.md
grav-pages/02.department/01.bookmark/: default.md
grav-pages/02.department/02.music/: default.md
grav-pages/02.department/03.author/: default.md
grav-pages/02.department/04.git/: default.md
grav-pages/02.department/04.status/: default.md
grav-pages/02.department/05.status/: default.md
grav-pages/02.hist/: blog.md  default.md  history.md
grav-pages/03.hist/: default.md
grav-pages/03.ypologisti/01.mesy/: default.md
grav-pages/03.ypologisti/02.mesy-priv/: default.md
grav-pages/04.archives/: default.md
grav-pages/04.archives/01.api/: default.md
grav-pages/04.ypologisti/: default.md
grav-pages/04.ypologisti/01.mesy/: default.md
grav-pages/04.ypologisti/02.mesy-priv/: default.md
grav-pages/04.ypologisti/03.ylikou/: default.md
grav-pages/04.ypologisti/04.syndesmos/: default.md
grav-pages/04.ypologisti/20.erga/: default
grav-pages/05.ypologisti/: default.md
grav-pages/05.ypologisti/01.mesy/: default.md
grav-pages/05.ypologisti/02.mesy-priv/: default.md
grav-pages/05.ypologisti/03.ylikou/: default.md
grav-pages/05.ypologisti/04.syndesmos/: default.md
grav-pages/05.ypologisti/10.systima/: default.md
grav-pages/05.ypologisti/11.systima/: default.md
grav-pages/05.ypologisti/20.erga/: default.md
grav-pages/05.ypologisti/21.erga/: default.md
images-src/: table.domain
images-src/esm-format/: EsmFormat.dot
images-src/mesy-priv/style/: InterruptManagementList.style  WaitForInterrupt.style
images-src/mesy-priv/substance/: ExceptionProgramCounter.substance  (+2 more)
images-src/symvo/: Instruction.puml  Output.puml  Symvo.puml
images-src/synde/: ExtractSections.puml  Input.puml  MergeSections.puml  Synde.puml  Writer.puml
images-src/syndesmos/: MessagesSummary.style  OperationsTaxonomy.puml
images-src/ylikou/: L1Cache.puml  MainUnit.puml  MissUnit.puml  ProbeUnit.puml  RefillUnit.puml  ReleaseUnit.puml
include/: About.h  Contact.h  ContactFormModel.h  ContactFormView.h  Footer.h  Header.h  Home.h  HomePage.h  Messages.h  NavigationBar.h  Portfolio.h  Profile.h  ProjectDetails.h  Projects.h  Resume.h  Section.h  Skills.h  SocialLinks.h
include/Bookmark/: Bookmark.h  BookmarkInfo.h  Cluster.h
include/Broadcast/: Broadcast.h
include/Homepage/: Homepage.h
include/Portfolio/: About.h  Contact.h  ContactFormModel.h  ContactFormView.h  ContactMessage.h  Footer.h  Header.h  Home.h  Messages.h  NavigationBar.h  Portfolio.h  Profile.h  ProjectDetails.h  ProjectInfo.h  Projects.h  Resume.h  Section.h  Skills.h  SocialLinks.h
include/Toolkits/: Echo.h
nginx-config/: wt_fcgi.conf  wt_ssl.conf  wt_static.conf  yangvillage.conf
src/: About.cpp  CMakeLists.txt  Contact.cpp  ContactFormModel.cpp  ContactFormView.cpp  Footer.cpp  Header.cpp  Home.cpp  HomePage.cpp  NavigationBar.cpp  Portfolio.cpp  Profile.cpp  ProjectDetails.cpp  Projects.cpp  Resume.cpp  Section.cpp  Skills.cpp  SocialLinks.cpp  main.cpp
src/Bookmark/: Bookmark.cpp  CMakeLists.txt  Cluster.cpp  main.cpp
src/Broadcast/: Broadcast.cpp  CMakeLists.txt  main.cpp
src/Homepage/: CMakeLists.txt  Homepage.cpp  main.cpp
src/Portfolio/: About.cpp  CMakeLists.txt  Contact.cpp  ContactFormModel.cpp  ContactFormView.cpp  Footer.cpp  Header.cpp  Home.cpp  NavigationBar.cpp  Portfolio.cpp  Profile.cpp  ProjectDetails.cpp  ProjectInfo.cpp  Projects.cpp  Resume.cpp  Section.cpp  Skills.cpp  SocialLinks.cpp  main.cpp
src/Toolkits/: CMakeLists.txt  Echo.cpp  main.cpp
static/: robots.txt  sitemap.xml
trac-wiki/: start-site.sh
trac-wiki/conf/: trac.ini
trac-wiki/templates/: site_head.html
trac-wiki/wikis/: DocArchive.txt  NoticeBoard.txt  SiteHistory.txt  WikiStart.txt  YpologistProject.txt  YpologistProject_ErgaToolchain.txt  YpologistProject_ErgaToolchain_EsmFormat.txt  YpologistProject_MesyIsa.txt  YpologistProject_MesyPriv.txt  YpologistProject_SyndeProtocol.txt  YpologistProject_SystimaOs.txt  YpologistProject_YlikouArch.txt
(+174 files in other folders)
